<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".configuracao">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="151dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/configuração"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="239dp"
        android:layout_height="53dp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="105dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/som"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="86dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lingua"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="191dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="91dp"
        android:layout_height="92dp"
        app:srcCompat="@android:drawable/stat_sys_headset"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="256dp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="86dp"
        android:layout_height="95dp"
        app:srcCompat="?android:attr/fingerprintAuthDrawable"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="256dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paleta"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="385dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="448dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="441dp" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotationY="-178"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="441dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/créditos"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="527dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="583dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="626dp" />

</androidx.constraintlayout.widget.ConstraintLayout>