<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFF90"
    tools:context=".Jogo" >

    <Button
        android:id="@+id/button6"
        android:layout_width="105dp"
        android:layout_height="108dp"
        android:background="#5A3737"
        android:text="@string/vida"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="357dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="99dp"
        android:layout_height="109dp"
        android:background="#6E4444"
        android:text="@string/Defesa"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="358dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="107dp"
        android:layout_height="109dp"
        android:background="#673A3A"
        android:text="@string/ataque"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="356dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="116dp"
        android:layout_height="109dp"
        android:background="#774F4F"
        android:text="@string/Agilidade"
        tools:layout_editor_absoluteX="310dp"
        tools:layout_editor_absoluteY="357dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="364dp"
        android:layout_height="23dp"
        android:background="#98D8E8"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="20dp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="363dp"
        android:layout_height="18dp"
        android:background="#FAABAB"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="62dp" />

</androidx.constraintlayout.widget.ConstraintLayout>